[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorchfi"
version = "0.6.1" 
description = "A Runtime Fault Injection Tool for PyTorch"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
dependencies = [
    "torch>=1.1.0",
    "numpy>=1.16.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytorchfi*"]